--- a/react/contact-app/package.json
+++ b/react/contact-app/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "myapp",
+  "name": "contact-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
