--- a/react-native/fuckingweather/app.json
+++ b/react-native/fuckingweather/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "testwheatherapp",
+    "name": "fuckingweather",
     "description": "This project is really great.",
-    "slug": "testwheatherapp",
+    "slug": "fuckingweather",
     "privacy": "public",
-    "sdkVersion": "28.0.0",
+    "sdkVersion": "29.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
